src/main/java/com/example/auctionwebapp/userManagement/common/error/InvalidOperationException.java
package com.example.auctionwebapp.userManagement.common.error;

public class InvalidOperationException {
}
